syntax = "proto3";

package user;

option go_package = "./proto/user;user";

service User {
	//注册
	rpc Register(UserRegisterRequest) returns (UserRegisterResponse) {}

	//登录
	rpc Login(UserLoginRequest) returns (UserLoginResponse) {}

	//查询用户信息
	rpc GetInfo(UserInfoRequest) returns(UserInfoResponse) {}
}

message UserRegisterRequest{
	string user_name = 1;
	string user_nick_name = 2;
	string user_password = 3;
}

message UserRegisterResponse{
	string message = 1;
}

message UserLoginRequest{
	string user_name = 1;
	string user_password = 2;
}

message UserLoginResponse{
	bool is_success = 1;
}

message UserInfoRequest{
	string user_name = 1;
}

message UserInfoResponse{
	int64 user_id = 1;
	string user_name = 2;
	string user_nick_name = 3;
}
